<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

        <EditText
            android:id="@+id/input_vunetid"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="VUnetID"/>

        <EditText
            android:id="@+id/input_passwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="Password"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Login" />

</LinearLayout>